# cleangram

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cleangram/: __init__.py  __main__.py  _version.py  env.py  error.py  exceptions.py
cleangram/aio/: __init__.py
cleangram/application/: __init__.py  app.py  blueprint.py  router.py
cleangram/base/: __init__.py
cleangram/cli/: __init__.py  info.py
cleangram/client/: __init__.py  base.py  bot.py
cleangram/core/: __init__.py  _version.py
cleangram/http/: base.py  httpx_.py
cleangram/methods/: __init__.py  add_sticker_to_set.py  answer_callback_query.py  answer_inline_query.py  answer_pre_checkout_query.py  answer_shipping_query.py  approve_chat_join_request.py  ban_chat_member.py  ban_chat_sender_chat.py  base.py  close.py  copy_message.py  create_chat_invite_link.py  create_new_sticker_set.py  decline_chat_join_request.py  delete_chat_photo.py  delete_chat_sticker_set.py  delete_message.py  delete_my_commands.py  delete_sticker_from_set.py  delete_webhook.py  edit_chat_invite_link.py  edit_message_caption.py  edit_message_live_location.py  edit_message_media.py  edit_message_reply_markup.py  edit_message_text.py  export_chat_invite_link.py  forward_message.py  get_chat.py  get_chat_administrators.py  get_chat_member.py  get_chat_member_count.py  get_file.py  get_game_high_scores.py  get_me.py  get_my_commands.py  get_sticker_set.py  get_updates.py  get_user_profile_photos.py  (+44 more)
docs/: index.html
tests/: components.py  conftest.py  const.py  test_aio.py  test_aio_bot.py  test_base_client.py
(+724 files in other folders)
