[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cleangram"
authors = [{name = "Arwichok", email = "me@arwi.dev"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only"
]
dynamic = ["version", "description"]
dependencies = [
    "httpx",
    "dataclass_factory"
]

[project.urls]
Home = "https://github.com/cleangram/cleangram"
