[tool.poetry]
name = "cleangram"
version = "0.0.0.dev3"
description = "Simple framework for develop telegram bots"
authors = ["Arwichok <me@arwi.dev>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
