[tool.poetry]
name = "cleangram"
version = "0.0.0.dev3"
description = "Simple framework for develop telegram bots"
authors = ["Arwichok <me@arwi.dev>"]
readme = "README.md"
repository = "https://github.com/cleangram/cleangram"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
